deployments/platformdeployment/auro-cdk-working/aurorapostgres.template
Resources:
  mycdkvpc037DA4AF:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/Resource
  mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      AvailabilityZone: us-west-2a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public-subnet-1
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet1
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet1/Subnet
  mycdkvpcpublicsubnet1Subnet1RouteTableE1ABF705:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet1
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet1/RouteTable
  mycdkvpcpublicsubnet1Subnet1RouteTableAssociation160A4CBB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: mycdkvpcpublicsubnet1Subnet1RouteTableE1ABF705
      SubnetId:
        Ref: mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet1/RouteTableAssociation
  mycdkvpcpublicsubnet1Subnet1DefaultRoute1255C1C4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: mycdkvpcpublicsubnet1Subnet1RouteTableE1ABF705
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: mycdkvpcIGW4220D5A9
    DependsOn:
      - mycdkvpcVPCGW2444B783
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet1/DefaultRoute
  mycdkvpcpublicsubnet1Subnet2SubnetE104EC20:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      AvailabilityZone: us-west-2b
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public-subnet-1
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet2
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet2/Subnet
  mycdkvpcpublicsubnet1Subnet2RouteTable3099F008:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet2
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet2/RouteTable
  mycdkvpcpublicsubnet1Subnet2RouteTableAssociation2ECC1C4A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: mycdkvpcpublicsubnet1Subnet2RouteTable3099F008
      SubnetId:
        Ref: mycdkvpcpublicsubnet1Subnet2SubnetE104EC20
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet2/RouteTableAssociation
  mycdkvpcpublicsubnet1Subnet2DefaultRoute98E2F656:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: mycdkvpcpublicsubnet1Subnet2RouteTable3099F008
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: mycdkvpcIGW4220D5A9
    DependsOn:
      - mycdkvpcVPCGW2444B783
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet2/DefaultRoute
  mycdkvpcpublicsubnet1Subnet3Subnet0A0916F8:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      AvailabilityZone: us-west-2c
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public-subnet-1
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet3
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet3/Subnet
  mycdkvpcpublicsubnet1Subnet3RouteTableF66E029F:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet3
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet3/RouteTable
  mycdkvpcpublicsubnet1Subnet3RouteTableAssociation8CC3E8C8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: mycdkvpcpublicsubnet1Subnet3RouteTableF66E029F
      SubnetId:
        Ref: mycdkvpcpublicsubnet1Subnet3Subnet0A0916F8
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet3/RouteTableAssociation
  mycdkvpcpublicsubnet1Subnet3DefaultRouteD14D6107:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: mycdkvpcpublicsubnet1Subnet3RouteTableF66E029F
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: mycdkvpcIGW4220D5A9
    DependsOn:
      - mycdkvpcVPCGW2444B783
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/public-subnet-1Subnet3/DefaultRoute
  mycdkvpcisolatedsubnet1Subnet1Subnet79DD3BAF:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      AvailabilityZone: us-west-2a
      CidrBlock: 10.0.3.0/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: isolated-subnet-1
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet1
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet1/Subnet
  mycdkvpcisolatedsubnet1Subnet1RouteTable78317948:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet1
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet1/RouteTable
  mycdkvpcisolatedsubnet1Subnet1RouteTableAssociation0E10D4C9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: mycdkvpcisolatedsubnet1Subnet1RouteTable78317948
      SubnetId:
        Ref: mycdkvpcisolatedsubnet1Subnet1Subnet79DD3BAF
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet1/RouteTableAssociation
  mycdkvpcisolatedsubnet1Subnet2Subnet5C8345CD:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      AvailabilityZone: us-west-2b
      CidrBlock: 10.0.3.16/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: isolated-subnet-1
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet2
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet2/Subnet
  mycdkvpcisolatedsubnet1Subnet2RouteTable69CCD17D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet2
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet2/RouteTable
  mycdkvpcisolatedsubnet1Subnet2RouteTableAssociation416F7812:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: mycdkvpcisolatedsubnet1Subnet2RouteTable69CCD17D
      SubnetId:
        Ref: mycdkvpcisolatedsubnet1Subnet2Subnet5C8345CD
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet2/RouteTableAssociation
  mycdkvpcisolatedsubnet1Subnet3Subnet4FECF22F:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      AvailabilityZone: us-west-2c
      CidrBlock: 10.0.3.32/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: isolated-subnet-1
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet3
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet3/Subnet
  mycdkvpcisolatedsubnet1Subnet3RouteTableC720ED94:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet3
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet3/RouteTable
  mycdkvpcisolatedsubnet1Subnet3RouteTableAssociationFA1DBC11:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: mycdkvpcisolatedsubnet1Subnet3RouteTableC720ED94
      SubnetId:
        Ref: mycdkvpcisolatedsubnet1Subnet3Subnet4FECF22F
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/isolated-subnet-1Subnet3/RouteTableAssociation
  mycdkvpcIGW4220D5A9:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AuroraCdkStack/my-cdk-vpc
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/IGW
  mycdkvpcVPCGW2444B783:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: mycdkvpc037DA4AF
      InternetGatewayId:
        Ref: mycdkvpcIGW4220D5A9
    Metadata:
      aws:cdk:path: AuroraCdkStack/my-cdk-vpc/VPCGW
  ec2instancesgCC5C402A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH (TCP port 22) in
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow SSH Access
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: mycdkvpc037DA4AF
    Metadata:
      aws:cdk:path: AuroraCdkStack/ec2-instance-sg/Resource
  ec2Role38AB65C0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSSMManagedInstanceCore
    Metadata:
      aws:cdk:path: AuroraCdkStack/ec2Role/Resource
  InstanceInstanceProfileAB5AEF02:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: ec2Role38AB65C0
    Metadata:
      aws:cdk:path: AuroraCdkStack/Instance/InstanceProfile
  InstanceC1063A87:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-west-2a
      IamInstanceProfile:
        Ref: InstanceInstanceProfileAB5AEF02
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmarm64gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t4g.micro
      SecurityGroupIds:
        - Fn::GetAtt:
            - ec2instancesgCC5C402A
            - GroupId
      SubnetId:
        Ref: mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA
      Tags:
        - Key: Name
          Value: AuroraCdkStack/Instance
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - ec2Role38AB65C0
    Metadata:
      aws:cdk:path: AuroraCdkStack/Instance/Resource
  dbinstanceSubnetGroupE4F5C66F:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for db-instance database
      SubnetIds:
        - Ref: mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA
        - Ref: mycdkvpcpublicsubnet1Subnet2SubnetE104EC20
        - Ref: mycdkvpcpublicsubnet1Subnet3Subnet0A0916F8
    Metadata:
      aws:cdk:path: AuroraCdkStack/db-instance/SubnetGroup/Default
  dbinstanceSecurityGroupF70613D6:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for db-instance database
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: mycdkvpc037DA4AF
    Metadata:
      aws:cdk:path: AuroraCdkStack/db-instance/SecurityGroup/Resource
  dbinstanceSecurityGroupfrom00000IndirectPortA957AD3E:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
      Description: from 0.0.0.0/0:{IndirectPort}
      FromPort:
        Fn::GetAtt:
          - dbinstance310A317F
          - Endpoint.Port
      GroupId:
        Fn::GetAtt:
          - dbinstanceSecurityGroupF70613D6
          - GroupId
      ToPort:
        Fn::GetAtt:
          - dbinstance310A317F
          - Endpoint.Port
    Metadata:
      aws:cdk:path: AuroraCdkStack/db-instance/SecurityGroup/from 0.0.0.0_0:{IndirectPort}
  AuroraCdkStackdbinstanceSecret406CA5023fdaad7efa858a3daf9490cf0a702aeb:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"postgres"}'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: AuroraCdkStack/db-instance/Secret/Resource
  dbinstanceSecretAttachmentC9F3DAC7:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: AuroraCdkStackdbinstanceSecret406CA5023fdaad7efa858a3daf9490cf0a702aeb
      TargetId:
        Ref: dbinstance310A317F
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: AuroraCdkStack/db-instance/Secret/Attachment/Resource
  dbinstance310A317F:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: "100"
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 0
      CopyTagsToSnapshot: true
      DBInstanceClass: db.t3.micro
      DBName: postgres
      DBSubnetGroupName:
        Ref: dbinstanceSubnetGroupE4F5C66F
      DeleteAutomatedBackups: true
      DeletionProtection: false
      Engine: postgres
      EngineVersion: "13.4"
      MasterUsername: postgres
      MasterUserPassword: Great12345
       
      MaxAllocatedStorage: 105
      MultiAZ: false
      PubliclyAccessible: true
      StorageType: gp2
      VPCSecurityGroups:
        - Fn::GetAtt:
            - dbinstanceSecurityGroupF70613D6
            - GroupId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: AuroraCdkStack/db-instance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/12Ry47CMAxFv4V9yAxoHmseEmI1VUFsR24wJdAmyHZAqOq/TyG0hVnZPrmxr5Ox/vjU7wO48NBsj8PCZrpaCZijatBvhWasq83JqNnObZKZSkJWWLMKmUO5sT5LfRBcQ1Zgz3s2YfbGgljvOrFKyJ5BsO+xdILU5IuGXuD6GPqoJtLY2pfoRK3QBLJyXZAPp/u4F7B0LOAMxpZ9/qJaupyQuVYWSl2lPvpuY3stIb+zBdaKtqyrOQhkwNg1jdY7G/PpM2jVzViK+82n7c1a8Z1yCQ5yJF1FfzdhDGugHOVp6U7w/6SuVYrsA8UtEyAosXnIW/ET5BTi/zwktXJ+i/rAb+fRlx5969HgwNYOKTixJeo0xj9HH6SuGAIAAA==
    Metadata:
      aws:cdk:path: AuroraCdkStack/CDKMetadata/Default
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmarm64gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-arm64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Outputs:
  dbEndpoint:
    Value:
      Fn::GetAtt:
        - dbinstance310A317F
        - Endpoint.Address
  secretName:
    Value:
      Fn::Join:
        - "-"
        - - Fn::Select:
              - 0
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 6
                      - Fn::Split:
                          - ":"
                          - Ref: AuroraCdkStackdbinstanceSecret406CA5023fdaad7efa858a3daf9490cf0a702aeb
          - Fn::Select:
              - 1
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 6
                      - Fn::Split:
                          - ":"
                          - Ref: AuroraCdkStackdbinstanceSecret406CA5023fdaad7efa858a3daf9490cf0a702aeb
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
